# Bureau

./: README.md  build.py  pyproject.toml
.claude/: settings.local.json
doc/: IMPLEMENT.md  SPEC.md
docs/superpowers/plans/: 2026-04-01-enhanced-status-detection.md
docs/superpowers/specs/: 2026-04-01-enhanced-status-detection-design.md
example/: app.py  macos.py  manager.py  models.py  pyproject.toml  windows.py
termdash/: __init__.py  __main__.py  analyzer.py  app.py  commands.py  db.py  manager.py  models.py
termdash/platform/: __init__.py  base.py  linux.py  macos.py  windows.py
termdash/widgets/: __init__.py  group_browser.py  session_table.py  spawn_dialog.py
